# FrankSherlock

./: .gitignore  CLAUDE.md  README.md  hello.py  pyproject.toml
.github/workflows/: aur-publish.yml  ci.yml
classification/: run_classification.py
docs/: BENCHMARK_CONFIG.json  IDEA.md  IDEA2.md  RESULTS.md  ground_truth_audio.json  ground_truth_images.json  ground_truth_videos.json
docs/superpowers/plans/: 2026-04-20-find-similar.md  2026-04-20-frank-sherlock-improvements.md  2026-04-20-phase1-smoke.md  2026-04-21-auto-organize-and-findability.md  2026-04-22-missing-features.md  2026-04-23-macro-auto-organize.md
lib/: common.py
releases/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.5.0.md  v0.6.0.md  v0.8.0.md  v0.9.0.md
scripts/: phase0_verify_env.py  phase2a_ollama_vision.py  phase2b_wd_tagger.py  phase2c_compare_images.py  phase2d_ocr.py  phase2e_qwen_size_compare.py  phase3a_chromaprint.py  phase3c_compare_audio.py  phase3d_faster_whisper.py  phase4b_video_classify.py  phase5_catalog.py
sherlock/desktop/: package-lock.json  package.json
sherlock/desktop/src/: App.tsx  api.ts  app.css  styles.css  types.ts
sherlock/desktop/src-tauri/: Cargo.toml  tauri.conf.json
sherlock/desktop/src-tauri/icons/: icon.icns
sherlock/desktop/src-tauri/src/: autocomplete.rs  classify.rs  clustering.rs  config.rs  db.rs  error.rs  exif.rs  filters.rs  find_similar.rs  lib.rs  models.rs  organize.rs  pdf.rs  portability.rs  query_parser.rs  runtime.rs  scan.rs  thumbnail.rs  timeline.rs  video.rs
sherlock/desktop/src-tauri/src/llm/: client.rs  management.rs  mod.rs
sherlock/desktop/src-tauri/src/platform/: clipboard.rs  gpu.rs  mod.rs  process.rs  python.rs
sherlock/desktop/src/__tests__/: fixtures.ts  setup.ts
sherlock/desktop/src/__tests__/components/: ChipSearchBar.test.tsx  ConfirmDeleteModal.test.tsx  ContextMenu.test.tsx  ExportCatalogModal.test.tsx  HelpModal.test.tsx  ImageGrid.test.tsx  ImportCatalogModal.test.tsx  ModelInfoModal.test.tsx  PreviewModal.test.tsx  RemapRootModal.test.tsx  RootCard.test.tsx  SetupModal.test.tsx  Sidebar.test.tsx  SimilarResultsModal.test.tsx  TagRulesModal.test.tsx  TimelineHeatmap.test.tsx  Toolbar.test.tsx
sherlock/desktop/src/__tests__/hooks/: useDuplicatesManager.test.ts
sherlock/desktop/src/components/Content/: BurstReviewView.css  BurstReviewView.tsx  Content.css  Content.tsx  ContextMenu.css  ContextMenu.tsx  DuplicatesView.css  DuplicatesView.tsx  EventsView.css  EventsView.tsx  FacesView.css  FacesView.tsx  ImageGrid.tsx  MapView.css  MapView.tsx  TimelineHeatmap.css  TimelineHeatmap.tsx  (+4 more)
sherlock/desktop/src/hooks/: useDragReorder.ts  useDuplicatesManager.ts  useGridNavigation.ts  useSavedSearchAlerts.ts  useScanManager.ts
sherlock/desktop/src/utils/: scanEta.ts
(+38 files in other folders)
