[package]
name = "sherlock_app"
version = "0.1.0"
description = "Frank Sherlock desktop application"
authors = ["AkitaOnRails"]
license = "GPL-3.0-only"
repository = "https://github.com/akitaonrails/FrankSherlock"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sherlock_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
dirs = "6"
dunce = "1"
hex = "0.4"
log = "0.4"
regex = "1"
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite", "backup"] }
rusqlite_migration = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
image = "0.25"
base64 = "0.22"
walkdir = "2"
arboard = "3"
which = "8"
sysinfo = "0.34"
kamadak-exif = "0.6"
reverse_geocoder = "4"
pdfium-render = "0.8"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"] }
ndarray = "0.17"
zip = { version = "2", default-features = false, features = ["deflate"] }
rqrr = "0.10"
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
